# arduino-cmake-tests

./: .gitmodules  CMakeLists.txt  README.md
libraries/AP_Common/: AP_Common.h
libraries/FastSerial/: vprintf.cpp
libraries/FastSerial/examples/FastSerial/: FastSerial.pde
